--- a/src/App.css
+++ b/src/App.css
@@ -40,10 +40,12 @@
   justify-content: center;
   padding: 0.5rem 0;
   background-color: transparent;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .searchbar-box {
-  margin: 0 auto;
+  padding: 0.5rem 0.5rem;
   height: 40px;
   display: flex;
   width: 80%;
@@ -54,8 +56,44 @@
 
 .searchbar-message {
   padding: 0.5rem 1rem;
+  outline: none;
   font-style: italic;
+  width: 100%;
   display: flex;
+  justify-content: flex-start;
+  background: transparent;
+  border: none;
+}
+
+.searchbar-result {
+  width: 80%;
+  padding: 0.5rem 0.5rem;
+  border: 2px solid black;
+  border-radius: 20px;
+  background: transparent;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0.5rem;
+}
+
+.module-item {
+  border: 1px solid black;
+  border-radius: 10px;
+  align-content: center;
+  padding: 0.5rem 0.5rem;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.module-item-active {
+  border: 1px solid white;
+  color: white;
+  font-weight: bold;
+  border-radius: 10px;
+  background: #2d4933;
+  align-content: center;
+  padding: 0.5rem 0.5rem;
+  flex-direction: column;
   justify-content: flex-start;
 }
 
