--- a/src/App.css
+++ b/src/App.css
@@ -197,5 +197,29 @@
   justify-content: center;
   align-items: center;
   margin: 0.5rem 0;
-  width: 50%;
+  width: 100%;
+}
+
+.module-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0.5rem 0.5rem;
+  width: fit-content;
+  background: white;
+  height: fit-content;
+  border-radius: 10px;
+  border: 1px solid black;
+}
+
+.module-name {
+  display: flex;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.module-description {
+  display: flex;
+  font-size: 10px;
 }
