--- a/src/App.css
+++ b/src/App.css
@@ -205,10 +205,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  padding: 0.5rem 0.5rem;
-  width: fit-content;
+  width: 100%;
   background: white;
-  height: fit-content;
+  height: 100%;
   border-radius: 10px;
   border: 1px solid black;
 }
@@ -217,9 +216,11 @@
   display: flex;
   font-size: 12px;
   font-weight: bold;
+  padding: 0.5rem;
 }
 
 .module-description {
   display: flex;
   font-size: 10px;
+  padding: 0.5rem;
 }
